<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/cim_photo_view"
        android:src="@drawable/seed_logo"
        android:scaleType="centerCrop"
        app:civ_border_color="#000000"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#8BC34A"
        android:clickable="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_email"
        android:layout_below="@+id/cim_photo_view"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/e_mail_tv"
            android:hint="@string/prompt_email"
            android:singleLine="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_username"
        android:layout_below="@+id/til_email"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_tv"
            android:layout_weight="1"
            android:hint="@string/username"
            android:layout_below="@+id/cim_photo_view"
            android:layout_toEndOf="@+id/register_button"
            android:singleLine="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_password"
        android:layout_centerVertical="true"
        android:layout_below="@+id/til_username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_tv"
            android:hint="@string/prompt_password"
            android:singleLine="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/action_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_below="@+id/til_password"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp" />

</RelativeLayout>